# brush

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  deny.toml  dist-workspace.toml  package-lock.json  package.json
.github/workflows/: ci.yml  spelling_and_links.yml
.zed/: debug.json  tasks.json
brush_nextjs/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
brush_nextjs/app/: layout.tsx  page.tsx
brush_nextjs/app/components/: BrushViewer.tsx
crates/brush-app/: Cargo.toml  index.html
crates/brush-app/src/: bin.rs  lib.rs  three.rs  ui_process.rs  wasm.rs
crates/brush-bench-test/: Cargo.toml
crates/brush-bench-test/src/: lib.rs  reference.rs  render_bench.rs  training_bench.rs
crates/brush-bench-test/test_cases/: basic_case.safetensors  pyproject.toml  tiny_case.safetensors
crates/brush-bench-test/tests/: integration.rs
crates/brush-cli/: Cargo.toml
crates/brush-cli/src/: lib.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: config.rs  lib.rs  parsed_gaussian.rs  scene.rs  scene_loader.rs  splat_export.rs  splat_import.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs
crates/brush-kernel/src/: lib.rs
crates/brush-prefix-sum/src/: lib.rs
crates/brush-process/: Cargo.toml
crates/brush-process/src/: config.rs  emit_warnings.rs  eval_export.rs  lib.rs  message.rs  process.rs  train_stream.rs  view_stream.rs  visualize_tools.rs
crates/brush-render/: Cargo.toml  build.rs
crates/brush-render-bwd/: build.rs
crates/brush-render-bwd/src/: burn_glue.rs  render_bwd.rs
crates/brush-render-bwd/src/shaders/: gather_grads.wgsl  project_backwards.wgsl  rasterize_backwards.wgsl
crates/brush-render/src/: burn_glue.rs  camera.rs  dim_check.rs  gaussian_splats.rs  kernels.rs  lib.rs  render.rs  render_aux.rs  sh.rs  validation.rs
crates/brush-render/src/shaders/: helpers.wgsl  map_gaussian_to_intersects.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl  upscale.wgsl
crates/brush-render/src/tests/: knn_init.rs  mod.rs  render.rs
crates/brush-rerun/: Cargo.toml
crates/brush-rerun/src/: burn_to_rerun.rs  lib.rs
crates/brush-serde/: Cargo.toml
crates/brush-serde/src/: export.rs  import.rs  lib.rs  ply_gaussian.rs  quant.rs
crates/brush-sort/src/: lib.rs
crates/brush-train/: Cargo.toml
crates/brush-train/src/: adam_scaled.rs  config.rs  eval.rs  lib.rs  multinomial.rs  quat_vec.rs  ssim.rs  stats.rs  train.rs
crates/brush-ui/: Cargo.toml
crates/brush-ui/src/: app.rs  burn_texture.rs  camera_controls.rs  datasets.rs  lib.rs  panels.rs  scene.rs  settings.rs  stats.rs  tracing_debug.rs  ui_process.rs
crates/brush-vfs/: Cargo.toml
crates/brush-vfs/src/: data_source.rs  lib.rs
crates/brush-wasm/: Cargo.toml
crates/brush-wasm/src/: lib.rs
crates/brush-wgsl/src/: lib.rs
crates/colmap-reader/: Cargo.toml
crates/colmap-reader/src/: lib.rs
crates/lpips/: Cargo.toml
crates/lpips-convert/: Cargo.toml
crates/lpips-convert/src/: main.rs
crates/lpips/src/: lib.rs
crates/rrfd/: Cargo.toml
crates/rrfd/src/: lib.rs  wasm.rs
examples/train-2d/examples/: train-2d.rs
extras/: Dockerfile
