[package]
name = "brush-app"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# Lib for android NDK.
[lib]
name = "main"
crate-type = ["cdylib"]

# Bin for desktop platforms / trunk.
[[bin]]
name = "brush_app"
path = "src/bin.rs"

[dependencies]
# Brush deps.
brush-ui.path = "../brush-ui"
brush-render.path = "../brush-render"
brush-dataset.path = "../brush-dataset"
brush-process.path = "../brush-process"
brush-vfs.path = "../brush-vfs"

burn-wgpu.workspace = true
burn-cubecl.workspace = true

glam.workspace = true

egui.workspace = true
eframe.workspace = true

anyhow.workspace = true
tracing.workspace = true
tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio-stream.workspace = true
parking_lot.workspace = true
log.workspace = true

tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-game-activity"] }
rrfd.path = "../rrfd"
brush-ui.path = "../brush-ui"
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }

android_logger = "0.15.0"
jni = "0.21.1"


# On desktop platforms
[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
# Default to wayland on linux. Change this to x11 if needed.
# this perhaps could use a feature on our side as well,
# so you could run with cargo run --no-default-features --features=11
winit = { version = "0.30", features = ["default"] }
clap.workspace = true
env_logger.workspace = true
brush-cli.path = "../brush-cli"
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }


[target.'cfg(target_family = "wasm")'.dependencies]
tracing-wasm = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "rt"] }
wasm-bindgen.workspace = true
web-sys.workspace = true
wasm-log = "0.3.1"
urlencoding.workspace = true

# wasm_js random backend needs to be enabled explicitly.
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false

[package.metadata.cargo-machete]
ignored = ["winit"] # Need winit to set backend.

[lints]
workspace = true


[features]
tracy = ["dep:tracing-tracy"]
tracing = ["dep:tracing-subscriber"]
debug-validation = ["brush-render/debug-validation"]
