[package]
name = "brush-bench-test"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-render-bwd.path = "../brush-render-bwd"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"

anyhow.workspace = true
image.workspace = true
glam.workspace = true
log.workspace = true
burn.workspace = true
burn-cubecl.workspace = true
bytemuck.workspace = true
rand.workspace = true

[dev-dependencies]
divan = "0.1.17"
safetensors.workspace = true
brush-rerun.path = "../brush-rerun"
rerun.workspace = true
tokio.workspace = true

[[bench]]
name = "training_bench"
harness = false
path = "src/training_bench.rs"

[lints]
workspace = true
