
[package]
name = "brush-process"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"
brush-vfs.path = "../brush-vfs"

burn-wgpu.workspace = true
serde.workspace = true

alphanumeric-sort.workspace = true
anyhow.workspace = true
async-fn-stream.workspace = true
burn.workspace = true
burn-cubecl.workspace = true
clap.workspace = true
rand.workspace = true
log.workspace = true
glam.workspace = true
web-time.workspace = true
image.workspace = true
tracing.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-stream.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rerun.workspace = true

[lints]
workspace = true
