[package]
name = "brush-train"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"
brush-dataset.path = "../brush-dataset"
brush-render-bwd.path = "../brush-render-bwd"

anyhow.workspace = true
image.workspace = true
clap.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
log.workspace = true
hashbrown.workspace = true

burn.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true

wgpu.workspace = true

[lints]
workspace = true

[features]
debug-validation = []
