[project]
name = "test-cases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "gsplat>=1.5.0",
    "matplotlib>=3.9.4",
    "mediapy>=1.2.2",
    "numpy>=2.0.2",
    "pillow>=11.1.0",
    "safetensors>=0.5.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "setuptools<=72.1.0",
    "ipywidgets>=8.1.5",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "gsplat"
url = "https://docs.gsplat.studio/whl/gsplat/pt24cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]


[dependency-groups]
dev = ["ipykernel>=6.29.5"]
